--- a/src/shared/components/Map.css
+++ b/src/shared/components/Map.css
@@ -1,4 +1,8 @@
 .map {
-    height: 600px;
-    width: 600px;
+  height: 600px;
+  /* width: 600px; */
+}
+
+#mapContainer {
+  border-radius: 40px;
 }
