--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.App-header {
+  margin-top: 50px;
+  border-bottom: 1px solid lightgrey;
 }
