--- a/src/parkings/pages/Autocomplete.css
+++ b/src/parkings/pages/Autocomplete.css
@@ -1,19 +1,19 @@
 .pac-container {
-  background-color: #151515;
+  background-color: #151515 !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .pac-item {
-  color: #f7f7f7;
+  color: #f7f7f7 !important;
   padding: 10px;
   display: flex;
   flex-direction: column;
 }
 .pac-item-query {
-  color: #f7f7f7;
+  color: #f7f7f7 !important;
 }
 .pac-item:hover {
-  background: #6666;
+  background: #6666 !important;
 }
 
 .pac-matched {
